# Dynamic-vehicle-routing-problem-with-stochastic-customer-requests-and-multiple-delivery-routes

./: .gitignore  README.md
pdtw/code/: ALNS.h  BF 4 Final.txt  BestSolutionList.h  CMakeLists.txt  CostFunction.h  CreateDriver.h  DF 4 Final.txt  Exchange.h  FeasibilityMatrix.h  FeasibleRouteList.h  IAlgorithm.h  ISolutionList.h  InsRmvMethod.h  InsertOperator.h  Makefile  Move.h  ProblemDefinition.h  RegretInsertion.h  RegretInsertionOperator.h  Relatedness.h  Relocate.h  RemoveOperator.h  RemoveRandom.h  RemoveRelated.h  RemoveRelatedQuick.h  RemoveScore.h  Request.h  SequentialInsertion.h  SolCompact.h  Solution.h  SolutionList.h  UbManager.cpp  UbManager.h  WorstRequestRemoval.h  analyzer.py  constants.c  constants.h  exec_sddp  extractor.py  runner.py
pdtw/code/Results/BB/: TWdf_C_1_hom_1_d1_1.txt  (+810 more)
pdtw/code/sddp/: BBNode.cpp  BBNode.h  BranchAndBoundSimulation.cpp  BranchAndBoundSimulation.h  BranchRegretSimulation.cpp  BranchRegretSimulation.h  ConsensusSimulation.cpp  ConsensusSimulation.h  CostFunctionSddp.cpp  CostFunctionSddp.h  Decision.h  DecisionMultiSet.cpp  DecisionMultiSet.h  Decisions.cpp  Decisions.h  DecisionsGroup.cpp  DecisionsGroup.h  DriverSddp.h  DynSimulation.cpp  DynSimulation.h  DynSimulationUlmer.cpp  DynSimulationUlmer.h  ExchangeSddp.cpp  ExchangeSddp.h  InsRmvMethodSddp.cpp  InsRmvMethodSddp.h  InsRmvMethodTsp.cpp  InsRmvMethodTsp.h  InsRmvMethodUlmer.cpp  InsRmvMethodUlmer.h  LoadSddp.cpp  LoadSddp.h  NodeSddp.h  Opt2.h  Parameters.cpp  Parameters.h  ProgressiveSimulation.cpp  ProgressiveSimulation.h  RelatednessSddp.h  RelocateIntraSddp.cpp  (+34 more)
(+21497 files in other folders)
